# gpuforge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_rmsnorm.py
csrc/: CMakeLists.txt
csrc/ops/: CMakeLists.txt
docs/: architecture.md  triton_kernels.md
gpuforge/: __init__.py
gpuforge/bench/: __init__.py  harness.py  models.py  timer.py
gpuforge/ops/: __init__.py
gpuforge/ops/cuda/: __init__.py
gpuforge/ops/reference/: __init__.py  rmsnorm.py  tolerances.py
gpuforge/ops/triton/: __init__.py  rmsnorm.py
gpuforge/utils/: __init__.py  gpu_info.py
tests/: conftest.py
tests/bench/: test_models.py
tests/ops/: test_rmsnorm_reference.py  test_rmsnorm_triton.py
